Fix search account
